apps/alloy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-redirect
  namespace: alloy
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - grafana.devopstoolkit.ai
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: dot.grafana.net
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-redirect
  namespace: alloy
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - jaeger.devopstoolkit.ai
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: dot.grafana.net
            statusCode: 301
