apps/jaeger.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: jaeger
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - jaeger.devopstoolkit.ai
  rules:
    - backendRefs:
        - name: jaeger
          port: 16686
