apps/youtube-automation.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: youtube-automation
  namespace: youtube-automation
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - youtube.devopstoolkit.ai
  rules:
    - backendRefs:
        - name: youtube-automation
          port: 80
